fixed a few small spacing issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -84,6 +84,10 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+textarea {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -102,13 +106,8 @@ input:focus, textarea:focus, select:focus{
 }
 
 
-
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
-  }
-  body {
-    color: #ffffff;
-    background: black;
   }
 }
